<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8BC34A"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/assurance1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15pt"
        android:hint="@string/message_res"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/assurance2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/assurance2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15pt"
        android:hint="@string/key_res"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/nulish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nulish"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="15pt"
        android:background="#4CAF50"
        android:gravity="center"
        android:onClick="eloquent"
        android:text="@string/encrypt_res"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Зашифровать" />

    <EditText
        android:id="@+id/implausible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15pt"
        android:hint="@string/key_reс"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/assurance2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="267dp"
        android:layout_height="65dp"
        android:layout_margin="15pt"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#4CAF50"
        android:gravity="center"
        android:text="@string/main_res"
        android:textSize="27sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/assurance1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.508"
        tools:text="main" />

</androidx.constraintlayout.widget.ConstraintLayout>